Connected to spring config server which is in turn connected to limits service repi

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
 spring.application.name=limits-service
 spring.config.import=optional:configserver:http://localhost:8888
+
+spring.profiles.active=qa
+#based on profile it will pick the value from the git config
+
+#spring.cloud.config.profile=qa
+
 limits-service.minimum=2
 limits-service.maximum=998
